--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,19 @@
 
+@media screen and (max-width:800px){
+    .wrap{
+  
+        padding: 10px 5px;
+    }
+    .naxBtns{
+        display: none;
+    }
+    .header__burger{
+        display: flex;
+    }
+}
+@media screen and (max-width:400px){
+.goodsItem{
+    width: 100%;
+    margin: 10px 0;
+}
+}
